# rosrider

rosrider/: CMakeLists.txt  package.xml
rosrider_cartographer/: CMakeLists.txt  package.xml
rosrider_cartographer/launch/: cartographer.launch.py  occupancy_grid.launch.py
rosrider_cartographer/rviz/: rosrider_cartographer.rviz
rosrider_description/: CMakeLists.txt  package.xml
rosrider_description/meshes/: caretta.stl  wheel_left.stl  wheel_right.stl
rosrider_description/urdf/: caretta.urdf  sorcerer.urdf
rosrider_fakenode/: CMakeLists.txt  package.xml
rosrider_fakenode/include/rosrider_fakenode/: rosrider_fakenode.hpp
rosrider_fakenode/launch/: rosrider_fakenode.launch.py  rviz2.launch.py
rosrider_fakenode/param/: caretta.yaml  sorcerer.yaml
rosrider_fakenode/src/: rosrider_fakenode.cpp
rosrider_gazebo/: CMakeLists.txt  package.xml
rosrider_gazebo/include/rosrider_gazebo/: rosrider_drive.hpp
rosrider_gazebo/launch/: box_world.launch.py  ekf_sim.launch.py  empty_world.launch.py  lab01.launch.py  robot_state_publisher.launch.py  spawn_robot.launch.py  ukf_sim.launch.py  willow.launch.py
rosrider_gazebo/models/box_world/: model.config  model.sdf
rosrider_gazebo/models/caretta/: model-1_4.sdf  model.config  model.sdf
rosrider_gazebo/models/common/: model.config
rosrider_gazebo/models/common/meshes/: box.stl  lab01.stl  sorcerer.stl
rosrider_gazebo/models/lab01/: model.config  model.sdf
rosrider_gazebo/models/sorcerer/: model-1_4.sdf  model.config  model.sdf
rosrider_gazebo/rviz/: rosrider_gazebo.rviz
rosrider_gazebo/src/: rosrider_drive.cpp
rosrider_gazebo/urdf/: caretta.urdf  common_properties.urdf  sorcerer.urdf
rosrider_gazebo/worlds/: box_world.world  empty_world.world  lab01.world  willowgarage.world
rosrider_interfaces/: CMakeLists.txt  package.xml
rosrider_interfaces/msg/: Diagnostics.msg
rosrider_interfaces/srv/: DriveCtl.srv  LedCtl.srv  PidCtl.srv  SetFloat.srv  SetInt.srv  SysCtl.srv
rosrider_navigation2/: CMakeLists.txt  package.xml
rosrider_navigation2/launch/: navigation2.launch.py
rosrider_navigation2/map/: lab01.pgm  lab01.yaml  map.pgm  willow.pgm  willow.yaml
rosrider_navigation2/param/: caretta.yaml  sorcerer.yaml
rosrider_node/: package.xml  setup.cfg  setup.py
rosrider_node/config/: f710.config.yaml  rosrider.yaml
rosrider_node/launch/: ekf.launch.py  rosrider.launch.py  ukf.launch.py
rosrider_node/param/: ekf.yaml  f710.config.yaml  rosrider.yaml  sorcerer.yaml  ukf.yaml
rosrider_node/rosrider_node/: DiffDriveController.py  EncoderController.py  OdometryController.py  Pose.py  rosrider_debug_publisher.py  rosrider_diff_drive.py  rosrider_node.py  rosrider_odometry_publisher.py
rosrider_services/: package.xml  setup.cfg  setup.py
rosrider_services/launch/: basic_services.launch.py  maintenance_services.launch.py
rosrider_services/rosrider_services/: drivemode_service.py  led_service.py  pidtune_service.py  rosrider_service.py  setfloat_service.py  setint_service.py  setrtc_service.py  sysctl_service.py
