<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rosrider</name>
  <version>0.0.1</version>
  <description>
    ROS2 packages for ROSRider
  </description>
  <maintainer email="altineller@gmail.com">Can Altineller</maintainer>
  <license>GPLv3</license>
  <url type="website">http://www.rosrider.com</url>
  <url type="repository">https://github.com/altineller/ROSRider</url>
  <url type="bugtracker">https://github.com/altineller/ROSRider/issues</url>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>rosrider_node</exec_depend>
  <exec_depend>rosrider_interfaces</exec_depend>
  <exec_depend>rosrider_services</exec_depend>
  <exec_depend>rosrider_fakenode</exec_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
