<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rosrider_gazebo</name>
  <version>0.0.1</version>
  <description>
    Gazebo simulation package for ROSRider
  </description>
  <maintainer email="altineller@gmail.com">Can Altineller</maintainer>
  <license>GPLv3</license>
  <url type="website">http://rosrider.com</url>
  <url type="repository">https://github.com/altineller/ROSRider</url>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>gazebo_ros_pkgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>tf2</depend>
  <export>
    <build_type>ament_cmake</build_type>
    <gazebo_ros gazebo_model_path="${prefix}/models"/>
  </export>
</package>
