<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rosrider_navigation2</name>
  <version>0.0.1</version>
  <description>
    ROS2 launch scripts for navigation2
  </description> 
  <maintainer email="altineller@gmail.com">Can Altineller</maintainer>
  <license>GPLv3</license>
  <url type="website">http://rosrider.com</url>
  <url type="repository">https://github.com/altineller/ROSRider</url>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>nav2_bringup</exec_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
