<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rosrider_services</name>
  <version>0.0.1</version>
  <description>ROS2 services for ROSRider board</description>
  <maintainer email="altineller@gmail.com">can</maintainer>
  <license>GPLv3</license>

  <depend>rclpy</depend>
  <depend>rosrider_interfaces</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
